[package]
name = "protc"
version = "0.1.0"
edition = "2021"
authors = [ "TadaHrd <hrudka.tadeas@gmail.com>", "Antônio Breno <antoniobgc10@gmail.com>" ]
description = ""
readme = "README.md"
repository = "https://github.com/rustpeople/protc"

[lib]
name = "protc"
path = "src/lib.rs"

[[bin]]
name = "protc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0" # Added by TadaHrd at around 20:00 GMT+1 7.6.2023 (D.M.YYYY)