[package]
name = "protc"
version = "0.1.0"
edition = "2021"
authors = [ "TadaHrd <hrudka.tadeas@gmail.com>", "Antônio Breno <antoniobgc10@gmail.com>" ]
description = ""
readme = "README.md"
repository = "https://github.com/rustpeople/protc"

[lib]
name = "protc"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
rustls = "0.21.1"
thiserror = "1.0" 